docs: добавлен javadoc и swagger