@@ -1,6 +1,5 @@
 package com.alkl1m.weatherapp.service.impl;
 
-import com.alkl1m.weatherapp.client.GeoClient;
 import com.alkl1m.weatherapp.client.WeatherClient;
 import com.alkl1m.weatherapp.dto.WeatherDto;
 import com.alkl1m.weatherapp.dto.web.GeoResponse;
@@ -18,23 +17,41 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 
+/**
+ * Реализация сервиса для работы с погодными данными.
+ *
+ * @author AlKl1M
+ */
 @Service
 @RequiredArgsConstructor
 public class WeatherServiceImpl implements WeatherService {
 
     @Value("${api.openweathermap.key}")
     private String apikey;
+
     private final WeatherClient weatherClient;
     private final GeoService geoService;
 
+    /**
+     * Получает погодные данные для указанного города.
+     * <p>
+     * Метод использует кеширование, чтобы избежать повторных запросов
+     * к API для одних и тех же параметров.
+     *
+     * @param cityName название города, для которого необходимо получить погодные данные
+     * @param units    единицы измерения для погодных данных (например, метрическая или имперская)
+     * @param lang     язык для описания погодных данных
+     * @return объект WeatherDto, содержащий информацию о погоде
+     * @throws GeoDataException если возникает ошибка при получении данных о погоде
+     */
     @Override
     @Cacheable(value = "weatherDataCache", key = "#cityName + '-' + #units + '-' + #lang")
     public WeatherDto getWeather(String cityName, String units, String lang) {
         try {
             List<GeoResponse> getGeoData = geoService.getGeoData(cityName, 1);
             WeatherResponse weatherData = weatherClient.getWeatherData(
-                    getGeoData.getFirst().lat(),
-                    getGeoData.getFirst().lon(),
+                    getGeoData.get(0).lat(),
+                    getGeoData.get(0).lon(),
                     units,
                     lang,
                     apikey);
@@ -44,8 +61,14 @@ public class WeatherServiceImpl implements WeatherService {
         }
     }
 
+    /**
+     * Очищает кэш данных о погоде.
+     * <p>
+     * Этот метод удаляет все записи в кэше для weatherDataCache.
+     */
     @CacheEvict(value = "weatherDataCache", allEntries = true)
     public void cleanWeatherDataCache() {
-        // @CacheEvict will erase weatherDataCache
+        // @CacheEvict будет очищать weatherDataCache
     }
+
 }
